@@ -1,3 +1,12 @@
+2004-12-09  Matt Austern  <austern@apple.com>
+
+	PR c++/18514
+	* g++.dg/ext/builtin1.C: New
+	* g++.dg/ext/builtin2.C: New
+	* g++.dg/ext/builtin3.C: New
+	* g++.dg/ext/builtin4.C: New
+	* g++.dg/ext/builtin5.C: New
+	
 2004-10-27  Geoffrey Keating  <geoffk@apple.com>
 
 	* gcc.dg/weak/typeof-2.c: Needs aliases as well as weak.
